# local-talking-llm

./: .cursorrules  AI_INSTRUCTIONS.md  AUDIO_FIX_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HOW_TO_RUN.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  TTS_FIX_README.md  USER_GUIDE.md  VOICE_RECORDING_FIX.md  app_optimized.py  docker-compose.yml  install-dev.sh  install.sh  pyproject.toml  requirements.txt  ruff.toml  run_ltl.sh  run_ltl_fixed.sh  run_optimized.sh  test_enhanced_tts.py  test_wake_word.py  tts.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.opencode/context/: 001-project-overview.md  002-code-examples.md  003-troubleshooting.md
config/: default.yaml
contrib/: talking-llm.service
examples/: benchmark.py  config-cloud-only.yaml  config-complete.yaml  config-cpu-only.yaml
ltl/: __init__.py  __main__.py
ltl/channels/: __init__.py  discord.py  telegram.py
ltl/commands/: __init__.py  chat.py  config_cmd.py  config_wizard.py  cron.py  gateway.py  init.py  setup.py  status.py  tool.py  tui.py  voice.py
ltl/core/: __init__.py  bus.py  config.py  localai.py  tools.py  whisper.py  wizard.py  workspace.py
src/: __init__.py  bounded_history.py  config_loader.py  connectivity.py  database.py  health.py  location.py  logging_config.py  openrouter.py  orchestrator.py  perf_monitor.py  persistent_history.py  piper_tts.py  retry.py  rlm_client.py  tools.py  vad.py  vector_store.py  wake_word.py  web_search.py
tests/: conftest.py  test_bounded_history.py  test_config_loader.py  test_database.py  test_health.py  test_orchestrator.py  test_rlm_client.py  test_tools.py
(+1 files in other folders)
